// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExperienceBlock should match 24s EN translations snapshot 1`] = `
<div>
  <section
    class="flex flex-col border-2 rounded-xl shadow-md"
  >
    <h3
      class="flex text-blue-800 font-bold italic p-4 text-2xl mb-4 border-b-2 justify-between items-center"
    >
      24s (LVMH group) 
      <span
        class="pl-4 text-base text-blue-500"
      >
        October 2022 - ...
      </span>
    </h3>
    <p
      class="text-blue-500 px-4 leading-8"
    >
      Within the web chapter made up of 4 people, maintenance and development of new features for the 24s e-commerce platform.
    </p>
    <ul
      class="p-4 md:pl-8"
    >
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Frontend interface design in React - Redux
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Development on a Next base
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Intervention within several feature teams
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Integration of design from figma models
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Typescript
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Unit tests, integration tests
      </li>
    </ul>
  </section>
</div>
`;

exports[`ExperienceBlock should match 24s ES translations snapshot 1`] = `
<div>
  <section
    class="flex flex-col border-2 rounded-xl shadow-md"
  >
    <h3
      class="flex text-blue-800 font-bold italic p-4 text-2xl mb-4 border-b-2 justify-between items-center"
    >
      24s (grupo LVMH) 
      <span
        class="pl-4 text-base text-blue-500"
      >
        Octubre 2022 - ...
      </span>
    </h3>
    <p
      class="text-blue-500 px-4 leading-8"
    >
      Dentro del capítulo web conformado por 4 personas, mantenimiento y desarrollo de nuevas funcionalidades para la plataforma de comercio electrónico 24s.
    </p>
    <ul
      class="p-4 md:pl-8"
    >
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Diseño de interfaz frontend en React - Redux
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Desarrollo sobre una base Next
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Intervención en varios equipos
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Integración del diseño de los modelos figma
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Typescript
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Pruebas de integración, pruebas de unidad
      </li>
    </ul>
  </section>
</div>
`;

exports[`ExperienceBlock should match 24s translations snapshot 1`] = `
<div>
  <section
    class="flex flex-col border-2 rounded-xl shadow-md"
  >
    <h3
      class="flex text-blue-800 font-bold italic p-4 text-2xl mb-4 border-b-2 justify-between items-center"
    >
      24s (LVMH group) 
      <span
        class="pl-4 text-base text-blue-500"
      >
        Octobre 2022 - ...
      </span>
    </h3>
    <p
      class="text-blue-500 px-4 leading-8"
    >
      Au sein du chapitre web constitué de 4 personnes, maintenance et développement de nouvelles fonctionnalités pour la plateforme e-commerce de 24s.
    </p>
    <ul
      class="p-4 md:pl-8"
    >
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Conception d'interfaces frontend en React - Redux
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Développement sur un socle en Next
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Intervention au sein de plusieurs feature team
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Integration du design à partir de maquettes figma
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Typescript
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Tests unitaire, tests d'intégration
      </li>
    </ul>
  </section>
</div>
`;

exports[`ExperienceBlock should match Altaprofits EN translations snapshot 1`] = `
<div>
  <section
    class="flex flex-col border-2 rounded-xl shadow-md"
  >
    <h3
      class="flex text-blue-800 font-bold italic p-4 text-2xl mb-4 border-b-2 justify-between items-center"
    >
      Altaprofits 
      <span
        class="pl-4 text-base text-blue-500"
      >
        March 2017- March 2020
      </span>
    </h3>
    <p
      class="text-blue-500 px-4 leading-8"
    >
      Within a team of 3 people, maintenance and development of front-end interfaces.
    </p>
    <ul
      class="p-4 md:pl-8"
    >
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Setting up the React library
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        New frontend features
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        New back-office features
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Back office management
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Site maintenance
      </li>
    </ul>
  </section>
</div>
`;

exports[`ExperienceBlock should match Altaprofits ES translations snapshot 1`] = `
<div>
  <section
    class="flex flex-col border-2 rounded-xl shadow-md"
  >
    <h3
      class="flex text-blue-800 font-bold italic p-4 text-2xl mb-4 border-b-2 justify-between items-center"
    >
      Altaprofits 
      <span
        class="pl-4 text-base text-blue-500"
      >
        Marzo 2017- Marzo 2020
      </span>
    </h3>
    <p
      class="text-blue-500 px-4 leading-8"
    >
      Dentro de un equipo de 3 personas, mantenimiento y desarrollo de interfaces front-end.
    </p>
    <ul
      class="p-4 md:pl-8"
    >
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Configurando la biblioteca React
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Nuevas funcionalidades de la interfaz
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Nuevas funcionalidades del back-office
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Gestión de back office
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Mantenimiento del sitio
      </li>
    </ul>
  </section>
</div>
`;

exports[`ExperienceBlock should match Altaprofits translations snapshot 1`] = `
<div>
  <section
    class="flex flex-col border-2 rounded-xl shadow-md"
  >
    <h3
      class="flex text-blue-800 font-bold italic p-4 text-2xl mb-4 border-b-2 justify-between items-center"
    >
      Altaprofits 
      <span
        class="pl-4 text-base text-blue-500"
      >
        Mars 2017- Mars 2020
      </span>
    </h3>
    <p
      class="text-blue-500 px-4 leading-8"
    >
      Au sein d'une équipe de 3 personnes, maintenance et développement des interfaces front-end.
    </p>
    <ul
      class="p-4 md:pl-8"
    >
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Mise en place de la librairie React
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Nouvelles fonctionnalités frontend
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Nouvelles fonctionnalités back-office
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Gestion du back-office
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Maintenance du site
      </li>
    </ul>
  </section>
</div>
`;

exports[`ExperienceBlock should match Wefight EN translations snapshot 1`] = `
<div>
  <section
    class="flex flex-col border-2 rounded-xl shadow-md"
  >
    <h3
      class="flex text-blue-800 font-bold italic p-4 text-2xl mb-4 border-b-2 justify-between items-center"
    >
      Wefight 
      <span
        class="pl-4 text-base text-blue-500"
      >
        April 2021 - October 2022
      </span>
    </h3>
    <p
      class="text-blue-500 px-4 leading-8"
    >
      With the front-end chapter made up of 5 people, design of interfaces for the back office as well as a patient monitoring platform.
    </p>
    <ul
      class="p-4 md:pl-8"
    >
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Design and integration of frontend interfaces in React - Redux
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Development on a Backend for frontend in Express
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Management of auth0 rights
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Implementation from a mongoDB database
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Typescript
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Unit tests, integration tests
      </li>
    </ul>
  </section>
</div>
`;

exports[`ExperienceBlock should match Wefight ES translations snapshot 1`] = `
<div>
  <section
    class="flex flex-col border-2 rounded-xl shadow-md"
  >
    <h3
      class="flex text-blue-800 font-bold italic p-4 text-2xl mb-4 border-b-2 justify-between items-center"
    >
      Wefight 
      <span
        class="pl-4 text-base text-blue-500"
      >
        Abril 2021 - Octubre 2022
      </span>
    </h3>
    <p
      class="text-blue-500 px-4 leading-8"
    >
      Con el capítulo front-end conformado por 5 personas, diseño de interfaces para el back office así como una plataforma de seguimiento de pacientes.
    </p>
    <ul
      class="p-4 md:pl-8"
    >
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Diseño e integración de interfaces frontend en React - Redux
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Desarrollo en un Backend para frontend en Express
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Gestión de derechos auth0
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Implementación desde una base de datos mongoDB
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Typescript
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Pruebas de integración, pruebas de unidad
      </li>
    </ul>
  </section>
</div>
`;

exports[`ExperienceBlock should match Wefight translations snapshot 1`] = `
<div>
  <section
    class="flex flex-col border-2 rounded-xl shadow-md"
  >
    <h3
      class="flex text-blue-800 font-bold italic p-4 text-2xl mb-4 border-b-2 justify-between items-center"
    >
      Wefight 
      <span
        class="pl-4 text-base text-blue-500"
      >
        Avril 2021 - Octobre 2022
      </span>
    </h3>
    <p
      class="text-blue-500 px-4 leading-8"
    >
      Avec le chapitre front-end constitué de 5 personnes, conception d'interfaces à destination du back-office ainsi que d'une plateforme de suivi patient.
    </p>
    <ul
      class="p-4 md:pl-8"
    >
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Conception et intégration d'interfaces frontend en React - Redux
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Développement sur un Backend for frontend en Express
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Gestion des droits auth0
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Mise en place à partir d'une base mongoDB
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Typescript
      </li>
      <li
        class="text-gray-600 leading-8 text-sm"
      >
        Tests unitaire, tests d'intégration
      </li>
    </ul>
  </section>
</div>
`;
